--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "agora-rtc-react": "git://github.com/AgoraIO-Community/agora-rtc-react.git#v1.0.1",
+    "agora-rtc-react": "https://github.com/AgoraIO-Community/agora-rtc-react.git#v1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
